crates/vvv/tests/corpus/snapshots/rust__history__human.snap
---
source: crates/vvv/tests/corpus.rs
expression: "corpus.run(args, false)"
---
exit 0
--- stdout ---
--- stderr ---
∅ no history
hint: --apply writes a plan and records it here; `vvv undo` reverses the newest
