crates/vvv/tests/corpus/snapshots/rust__history__json.snap
---
source: crates/vvv/tests/corpus.rs
expression: "self.run(args, true)"
---
exit 0
--- stdout ---
{"result":{"entries":[]},"schema":1,"status":"ok"}
--- stderr ---
